--- a/data/ABIDE/data_processing.ipynb
+++ b/data/ABIDE/data_processing.ipynb
@@ -56,7 +56,7 @@
     "pipeline = 'cpac'\n",
     "\n",
     "# Input data variables\n",
-    "root_folder = '/data/zfzhu/zs/MMGL/miccai_ABIDE/data'\n",
+    "root_folder = './miccai_ABIDE/data'\n",
     "data_folder = os.path.join(root_folder, 'ABIDE_pcp/cpac/filt_noglobal')\n",
     "phenotype = os.path.join(root_folder, 'ABIDE_pcp/Phenotypic_V1_0b_preprocessed1.csv')\n",
     "#phenotype = os.path.join(root_folder, 'TADPOLE/processed_standard_data.csv')\n",
